refactor(especie): usar IDs en lugar de nombres en DTOs, servicio y repositorio