@@ -26,6 +26,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -34,6 +35,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
@@ -46,8 +48,10 @@ class EspecieServiceTest {
 
     @Mock
     private IEspecieRepository especieRepository;
+
     @Mock
     private IZonaRepository zonaRepository;
+
     @Mock
     private IAnimalRepository animalRepository;
 
@@ -60,353 +64,160 @@ class EspecieServiceTest {
 
     @BeforeEach
     void setUp() {
-        // Zona de ejemplo
         zona = new Zona();
         zona.setId(1L);
-        zona.setNombre("Zona Test");
+        zona.setNombre("Zona Norte");
 
-        // Especie de ejemplo (sin animales primero)
-        especie = new Especie();
-        especie.setId(2L);
-        especie.setNombre("Especie Test");
-        especie.setZona(zona);
-        especie.setAnimales(Collections.emptyList());
-
-        // Animal de ejemplo para la prueba de eliminar con animales
         animal = new Animal();
-        animal.setId(3L);
-        animal.setNombre("Animal Test");
-        animal.setEspecie(especie);
-    }
+        animal.setId(100L);
 
-    // ====== obtenerEspeciePorId ======
-
-    @Test
-    void testObtenerEspeciePorId_Success() {
-        when(especieRepository.findById(2L)).thenReturn(Optional.of(especie));
-
-        EspecieResponseDto dto = especieService.obtenerEspeciePorId(2L);
-
-        assertNotNull(dto);
-        assertEquals(especie.getId(), dto.getId());
-        assertEquals(especie.getNombre(), dto.getNombre());
-        assertEquals(zona.getNombre(), dto.getZonaName());
-        assertTrue(dto.getNameAnimales().isEmpty());
-        verify(especieRepository, times(1)).findById(2L);
+        especie = new Especie();
+        especie.setId(10L);
+        especie.setNombre("León");
+        especie.setZona(zona);
+        especie.setAnimales(Set.of(animal));
     }
 
     @Test
-    void testObtenerEspeciePorId_NotFound() {
+    void obtenerEspeciePorId_debeRetornarDtoCuandoExiste() {
+        when(especieRepository.findById(10L)).thenReturn(Optional.of(especie));
+
+        EspecieResponseDto result = especieService.obtenerEspeciePorId(10L);
+
+        assertNotNull(result);
+        assertEquals(10L, result.getId());
+        assertEquals("León", result.getNombre());
+        assertEquals(1L, result.getZonaId());
+        assertEquals(List.of(100L), result.getAnimalesIds());
+    }
+
+    @Test
+    void obtenerEspeciePorId_debeLanzarExcepcionCuandoNoExiste() {
+        when(especieRepository.findById(999L)).thenReturn(Optional.empty());
+
+        assertThrows(EspecieNotFoundException.class,
+                () -> especieService.obtenerEspeciePorId(999L));
+    }
+
+    @Test
+    void obtenerTodasLasEspecies_debeRetornarListaCuandoExisten() {
+        when(especieRepository.findAll()).thenReturn(List.of(especie));
+
+        List<EspecieResponseDto> result = especieService.obtenerTodasLasEspecies();
+
+        assertEquals(1, result.size());
+        assertEquals("León", result.get(0).getNombre());
+    }
+
+    @Test
+    void obtenerTodasLasEspecies_debeLanzarExcepcionSiNoHayDatos() {
+        when(especieRepository.findAll()).thenReturn(List.of());
+
+        assertThrows(NoDataFoundException.class,
+                () -> especieService.obtenerTodasLasEspecies());
+    }
+
+    @Test
+    void crearEspecie_debeGuardarEspecieCuandoZonaExiste() {
+        EspecieRequestDto dto = new EspecieRequestDto("  Tigre  ", 1L);
+        when(zonaRepository.findById(1L)).thenReturn(Optional.of(zona));
+
+        especieService.crearEspecie(dto);
+
+        verify(especieRepository).save(argThat(e ->
+                e.getNombre().equals("Tigre") && e.getZona().equals(zona)
+        ));
+    }
+
+    @Test
+    void crearEspecie_debeLanzarExcepcionSiZonaNoExiste() {
+        EspecieRequestDto dto = new EspecieRequestDto("Tigre", 99L);
+        when(zonaRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThrows(ZonaNotFoundException.class,
+                () -> especieService.crearEspecie(dto));
+    }
+
+    @Test
+    void editarEspecie_debeActualizarNombreYZona() {
+        EspecieRequestDto dto = new EspecieRequestDto("Leopardo", 1L);
+        when(especieRepository.findById(10L)).thenReturn(Optional.of(especie));
+        when(zonaRepository.findById(1L)).thenReturn(Optional.of(zona));
+
+        especieService.editarEspecie(10L, dto);
+
+        verify(especieRepository).save(argThat(e ->
+                e.getNombre().equals("Leopardo") && e.getZona().equals(zona)
+        ));
+    }
+
+    @Test
+    void editarEspecie_debeLanzarExcepcionSiEspecieNoExiste() {
+        EspecieRequestDto dto = new EspecieRequestDto("Jaguar", 1L);
         when(especieRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(EspecieNotFoundException.class, () ->
-                especieService.obtenerEspeciePorId(99L)
-        );
-        verify(especieRepository, times(1)).findById(99L);
-    }
-
-    // ====== obtenerTodasLasEspecies ======
-
-    @Test
-    void testObtenerTodasLasEspecies_Success() {
-        Especie otraEspecie = new Especie();
-        otraEspecie.setId(4L);
-        otraEspecie.setNombre("Otra Especie");
-        otraEspecie.setZona(zona);
-        otraEspecie.setAnimales(List.of(animal)); // un animal asociado
-
-        when(especieRepository.findAll()).thenReturn(List.of(especie, otraEspecie));
-
-        List<EspecieResponseDto> lista = especieService.obtenerTodasLasEspecies();
-
-        assertEquals(2, lista.size());
-        // Verifica que uno de ellos es 'Especie Test' sin animales
-        assertTrue(lista.stream().anyMatch(dto ->
-                dto.getId().equals(2L) &&
-                        dto.getNameAnimales().isEmpty()
-        ));
-        // Verifica que 'Otra Especie' tiene un nombre en nameAnimales
-        assertTrue(lista.stream().anyMatch(dto ->
-                dto.getId().equals(4L) &&
-                        dto.getNameAnimales().contains("Animal Test")
-        ));
-        verify(especieRepository, times(1)).findAll();
+        assertThrows(EspecieNotFoundException.class,
+                () -> especieService.editarEspecie(99L, dto));
     }
 
     @Test
-    void testObtenerTodasLasEspecies_NoData() {
-        when(especieRepository.findAll()).thenReturn(Collections.emptyList());
+    void editarEspecie_debeLanzarExcepcionSiZonaNoExiste() {
+        EspecieRequestDto dto = new EspecieRequestDto("Jaguar", 99L);
+        when(especieRepository.findById(10L)).thenReturn(Optional.of(especie));
+        when(zonaRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(NoDataFoundException.class, () ->
-                especieService.obtenerTodasLasEspecies()
-        );
-        verify(especieRepository, times(1)).findAll();
-    }
-
-    // ====== crearEspecie ======
-
-    @Test
-    void testCrearEspecie_Success() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Nueva Especie");
-        request.setZonaName(zona.getNombre());
-
-        when(especieRepository.existsByNombreIgnoreCase("Nueva Especie"))
-                .thenReturn(false);
-        when(zonaRepository.findByNombreIgnoreCase(zona.getNombre()))
-                .thenReturn(Optional.of(zona));
-        when(especieRepository.save(any(Especie.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
-
-        assertDoesNotThrow(() -> especieService.crearEspecie(request));
-
-        verify(especieRepository, times(1))
-                .existsByNombreIgnoreCase("Nueva Especie");
-        verify(zonaRepository, times(1))
-                .findByNombreIgnoreCase(zona.getNombre());
-        verify(especieRepository, times(1)).save(any(Especie.class));
+        assertThrows(ZonaNotFoundException.class,
+                () -> especieService.editarEspecie(10L, dto));
     }
 
     @Test
-    void testCrearEspecie_AlreadyExists() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Especie Test"); // mismo nombre
-        request.setZonaName(zona.getNombre());
+    void eliminarEspecie_debeEliminarCuandoNoTieneAnimales() {
+        when(especieRepository.findById(10L)).thenReturn(Optional.of(especie));
+        when(animalRepository.existsByEspecie(especie)).thenReturn(false);
 
-        when(especieRepository.existsByNombreIgnoreCase("Especie Test"))
-                .thenReturn(true);
+        especieService.eliminarEspecie(10L);
 
-        assertThrows(EspecieAlreadyExistsException.class, () ->
-                especieService.crearEspecie(request)
-        );
-        verify(especieRepository, times(1))
-                .existsByNombreIgnoreCase("Especie Test");
-        verify(zonaRepository, never()).findByNombreIgnoreCase(any());
-        verify(especieRepository, never()).save(any());
+        verify(especieRepository).delete(especie);
     }
 
     @Test
-    void testCrearEspecie_ZonaNotFound() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Otra Especie");
-        request.setZonaName("Zona No Existe");
+    void eliminarEspecie_debeLanzarExcepcionSiTieneAnimales() {
+        when(especieRepository.findById(10L)).thenReturn(Optional.of(especie));
+        when(animalRepository.existsByEspecie(especie)).thenReturn(true);
 
-        when(especieRepository.existsByNombreIgnoreCase("Otra Especie"))
-                .thenReturn(false);
-        when(zonaRepository.findByNombreIgnoreCase("Zona No Existe"))
-                .thenReturn(Optional.empty());
+        assertThrows(EspecieConAnimalesException.class,
+                () -> especieService.eliminarEspecie(10L));
 
-        assertThrows(ZonaNotFoundException.class, () ->
-                especieService.crearEspecie(request)
-        );
-        verify(especieRepository).existsByNombreIgnoreCase("Otra Especie");
-        verify(zonaRepository).findByNombreIgnoreCase("Zona No Existe");
-        verify(especieRepository, never()).save(any());
-    }
-
-    // ====== editarEspecie ======
-
-    @Test
-    void testEditarEspecie_Success_ChangeNameAndZona() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Especie Editada");
-        request.setZonaName(zona.getNombre());
-
-        Especie existente = new Especie();
-        existente.setId(2L);
-        existente.setNombre("Especie Test");
-        existente.setZona(zona);
-        existente.setAnimales(Collections.emptyList());
-
-        when(especieRepository.findById(2L))
-                .thenReturn(Optional.of(existente));
-        // Queremos cambiar el nombre a uno distinto; comprobamos que no existe
-        when(especieRepository.existsByNombreIgnoreCase("Especie Editada"))
-                .thenReturn(false);
-        when(zonaRepository.findByNombreIgnoreCase(zona.getNombre()))
-                .thenReturn(Optional.of(zona));
-        when(especieRepository.save(any(Especie.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
-
-        assertDoesNotThrow(() -> especieService.editarEspecie(2L, request));
-
-        verify(especieRepository, times(1)).findById(2L);
-        verify(especieRepository, times(1)).existsByNombreIgnoreCase("Especie Editada");
-        verify(zonaRepository, times(1)).findByNombreIgnoreCase(zona.getNombre());
-        verify(especieRepository, times(1)).save(any(Especie.class));
-    }
-
-    @Test
-    void testEditarEspecie_NotFound() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Especie Nueva");
-        request.setZonaName(zona.getNombre());
-
-        when(especieRepository.findById(99L))
-                .thenReturn(Optional.empty());
-
-        assertThrows(EspecieNotFoundException.class, () ->
-                especieService.editarEspecie(99L, request)
-        );
-        verify(especieRepository, times(1)).findById(99L);
-        verify(especieRepository, never()).existsByNombreIgnoreCase(any());
-        verify(especieRepository, never()).save(any());
-    }
-
-    @Test
-    void testEditarEspecie_AlreadyExists_NombreInUse() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Especie Duplicada");
-        request.setZonaName(zona.getNombre());
-
-        Especie existente = new Especie();
-        existente.setId(2L);
-        existente.setNombre("Especie Test");
-        existente.setZona(zona);
-
-        when(especieRepository.findById(2L))
-                .thenReturn(Optional.of(existente));
-        // Simulamos que el nuevo nombre ya existe en otra entidad
-        when(especieRepository.existsByNombreIgnoreCase("Especie Duplicada"))
-                .thenReturn(true);
-
-        assertThrows(EspecieAlreadyExistsException.class, () ->
-                especieService.editarEspecie(2L, request)
-        );
-        verify(especieRepository, times(1)).findById(2L);
-        verify(especieRepository, times(1)).existsByNombreIgnoreCase("Especie Duplicada");
-        verify(especieRepository, never()).save(any());
-    }
-
-    @Test
-    void testEditarEspecie_ZonaNotFound() {
-        EspecieRequestDto request = new EspecieRequestDto();
-        request.setNombre("Especie Test"); // mismo nombre actual
-        request.setZonaName("Zona No Existe");
-
-        Especie existente = new Especie();
-        existente.setId(2L);
-        existente.setNombre("Especie Test");
-        existente.setZona(zona);
-
-        when(especieRepository.findById(2L))
-                .thenReturn(Optional.of(existente));
-        // Como el nombre no cambia, no chequea existsByNombre..., pero sí busca la zona
-        when(zonaRepository.findByNombreIgnoreCase("Zona No Existe"))
-                .thenReturn(Optional.empty());
-
-        assertThrows(ZonaNotFoundException.class, () ->
-                especieService.editarEspecie(2L, request)
-        );
-        verify(especieRepository, times(1)).findById(2L);
-        verify(zonaRepository, times(1)).findByNombreIgnoreCase("Zona No Existe");
-        verify(especieRepository, never()).save(any());
-    }
-
-    // ====== eliminarEspecie ======
-
-    @Test
-    void testEliminarEspecie_Success() {
-        Especie existente = new Especie();
-        existente.setId(2L);
-        existente.setNombre("Especie Test");
-        existente.setZona(zona);
-        existente.setAnimales(Collections.emptyList());
-
-        when(especieRepository.findById(2L))
-                .thenReturn(Optional.of(existente));
-        // Simulamos que no hay animales asociados
-        when(animalRepository.existsByEspecie(existente))
-                .thenReturn(false);
-        doNothing().when(especieRepository).delete(existente);
-
-        assertDoesNotThrow(() -> especieService.eliminarEspecie(2L));
-
-        verify(especieRepository, times(1)).findById(2L);
-        verify(animalRepository, times(1)).existsByEspecie(existente);
-        verify(especieRepository, times(1)).delete(existente);
-    }
-
-    @Test
-    void testEliminarEspecie_NotFound() {
-        when(especieRepository.findById(99L))
-                .thenReturn(Optional.empty());
-
-        assertThrows(EspecieNotFoundException.class, () ->
-                especieService.eliminarEspecie(99L)
-        );
-        verify(especieRepository, times(1)).findById(99L);
-        verify(animalRepository, never()).existsByEspecie(any());
         verify(especieRepository, never()).delete(any());
     }
 
     @Test
-    void testEliminarEspecie_HasAnimals() {
-        Especie existente = new Especie();
-        existente.setId(2L);
-        existente.setNombre("Especie Test");
-        existente.setZona(zona);
-        existente.setAnimales(List.of(animal));
+    void eliminarEspecie_debeLanzarExcepcionSiNoExiste() {
+        when(especieRepository.findById(99L)).thenReturn(Optional.empty());
 
-        when(especieRepository.findById(2L))
-                .thenReturn(Optional.of(existente));
-        // Simulamos que sí hay animales asociados
-        when(animalRepository.existsByEspecie(existente))
-                .thenReturn(true);
-
-        assertThrows(EspecieConAnimalesException.class, () ->
-                especieService.eliminarEspecie(2L)
-        );
-        verify(especieRepository, times(1)).findById(2L);
-        verify(animalRepository, times(1)).existsByEspecie(existente);
-        verify(especieRepository, never()).delete(any());
-    }
-
-    // ====== obtenerCantidadAnimalesPorEspecie ======
-
-    @Test
-    void testObtenerCantidadAnimalesPorEspecie_Success() {
-        Especie conAnimales = new Especie();
-        conAnimales.setId(5L);
-        conAnimales.setNombre("Especie Con Animales");
-        conAnimales.setZona(zona);
-
-        Animal a1 = new Animal();
-        a1.setId(6L);
-        a1.setNombre("A1");
-        a1.setEspecie(conAnimales);
-        Animal a2 = new Animal();
-        a2.setId(7L);
-        a2.setNombre("A2");
-        a2.setEspecie(conAnimales);
-        conAnimales.setAnimales(List.of(a1, a2));
-
-        when(especieRepository.findAll())
-                .thenReturn(List.of(especie, conAnimales));
-
-        List<AnimalesPorEspecieResponseDto> list =
-                especieService.obtenerCantidadAnimalesPorEspecie();
-
-        assertEquals(2, list.size());
-        // Uno de ellos (especie sin animales) debería tener cantidad 0
-        assertTrue(list.stream().anyMatch(dto ->
-                dto.getEspecie().equals("Especie Test") && dto.getCantidadAnimales() == 0
-        ));
-        // El otro (con 2 animales) debería tener cantidad 2
-        assertTrue(list.stream().anyMatch(dto ->
-                dto.getEspecie().equals("Especie Con Animales") && dto.getCantidadAnimales() == 2
-        ));
-        verify(especieRepository, times(1)).findAll();
+        assertThrows(EspecieNotFoundException.class,
+                () -> especieService.eliminarEspecie(99L));
     }
 
     @Test
-    void testObtenerCantidadAnimalesPorEspecie_NoData() {
-        when(especieRepository.findAll())
-                .thenReturn(Collections.emptyList());
+    void obtenerCantidadAnimalesPorEspecie_debeRetornarLista() {
+        when(especieRepository.findAll()).thenReturn(List.of(especie));
 
-        assertThrows(NoDataFoundException.class, () ->
-                especieService.obtenerCantidadAnimalesPorEspecie()
-        );
-        verify(especieRepository, times(1)).findAll();
+        List<AnimalesPorEspecieResponseDto> result = especieService.obtenerCantidadAnimalesPorEspecie();
+
+        assertEquals(1, result.size());
+        assertEquals("León", result.get(0).getEspecie());
+        assertEquals(1, result.get(0).getCantidadAnimales());
+    }
+
+    @Test
+    void obtenerCantidadAnimalesPorEspecie_debeLanzarExcepcionSiNoHayEspecies() {
+        when(especieRepository.findAll()).thenReturn(List.of());
+
+        assertThrows(NoDataFoundException.class,
+                () -> especieService.obtenerCantidadAnimalesPorEspecie());
     }
 }
+
+
+
